Revision history for Cache

0.09 in progress
 - applied Ken Williams's patch to pass all tests
 - changed the license to be either the GPL or the Artistic license
 - added Jay Sachs' implementation of NullCache
 - modified the remove methods to avoid croaking if two cache
   instances are both purging or limiting at the same time
 - migrated to a factory-like model with private contructors
   to fix the auto_purge_interval functionality
 - updated the documentation to better reflect that size means
   size in bytes
 - started version 0.09

0.08 2001-04-26-08-53
 - released version 0.08
 - renamed the auto_purge option to auto_purge_interval
 - added the auto_purge_on_set and auto_purge_on_get options
 - moved the Auto_Purge and Reset_Auto_Purge methods to BaseCache
   as the instance methods _auto_purge and _reset_auto_purge
 - added the auto_purge option and property to the base cache interface
   and implementations.  This option will call the purge method on
   the cache after the specified interval expires
 - renamed _set_namepsace to set_namespace (i.e., made it public)
 - added the set_object method to the cache interface
 - updated the test scripts and CREDITS file
 - updated the perldoc formatting to look better in HTML
 - removed the $VERSION from SizeAwareCache
 - started version 0.08

0.07 2001-03-27-08-55
 - released version 0.07
 - prepared for initial CPAN release
 - improved Cache::Cache documentation
 - removed last "use IPC::Shareable" 
 - added support in the Makefile.PL to conditionally build the
   SharedMemoryCache, which requires IPC::ShareLite, and thus runs only
   on certain architectures.  Also broke out the IPC related routines
   into the SharedCacheUtils package.
 - started version 0.07

0.06 2001-03-23-08-36
 - release version 0.06
 - added the get_identifiers method to the Cache interface, implemented
   the method for all classes, added a new test, and updated the test 
   scripts
 - added the size property to Object